# tangible-scalar-fields

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  README.md  benchmark.cmd  build-libs.cmd  configure.cmd  fetch-libs.cmd
.run/: molumes.run.xml
DataGenerator/: DataGeneratorMainFile.m  Data_Creator.m  DropWaveBasis.m  outliers.m  slopes.m  test.m  waves.m
DataGenerator/UserStudyFiles/: ScatterPlotExtractor.m  SlopeComputation.m  UserStudyExtractor.m  colorMapPosition.m  mark1.m  mark3.m  markSlope.m
UserStudy/: Data.csv  SetUpInfo.txt  Solutions.csv  bundle.html
config/: build-libs.cmd  buildexternals.cmake  copy-libs.cmd  fetch-libs.cmd  linux-build-libs.sh
config/cmake-modules/: FindDHD.cmake  FindDRD.cmake
dat/: 0_05_sampled_testdata_10.000.csv  0_05_sampled_testdata_50.000_high_freq.csv  0_05_sampled_testdata_50.000_low_freq.csv  0_05_sampled_testdata_50.000_mid_freq.csv  0_10_sampled_testdata_10.000.csv  0_10_sampled_testdata_50.000_high_freq.csv  0_10_sampled_testdata_50.000_low_freq.csv  0_10_sampled_testdata_50.000_mid_freq.csv  0_25_sampled_testdata_10.000.csv  0_25_sampled_testdata_50.000_high_freq.csv  0_25_sampled_testdata_50.000_low_freq.csv  0_25_sampled_testdata_50.000_mid_freq.csv  Airports-Europe.csv  Cities.csv  Data_P4_R1.csv  Different_Slopes_50.000.csv  Three_waves_1000.csv  Three_waves_10000.csv  Three_waves_100000.csv  Three_waves_50000.csv  abalone_data.csv  clustMe1.csv  clustMe10.csv  clustMe11.csv  clustMe12.csv  clustMe13.csv  clustMe14.csv  clustMe15.csv  clustMe16.csv  clustMe17.csv  clustMe18.csv  clustMe19.csv  clustMe2.csv  clustMe20.csv  clustMe21.csv  clustMe22.csv  clustMe23.csv  clustMe24.csv  clustMe25.csv  clustMe26.csv  (+88 more)
doc/: openmp_test.xlsx
res/: boundingbox.frag  boundingbox.vert
res/axis/: axis-fs.glsl  axis-vs.glsl
res/boundingbox/: boundingbox-fs.glsl  boundingbox-gs.glsl  boundingbox-tcs.glsl  boundingbox-tes.glsl  boundingbox-vs.glsl
res/crystal/: calculate-hexagons-cs.glsl  crystal-fs.glsl  crystal-gs.glsl  crystal-vs.glsl  cull-and-extrude-hexagons-cs.glsl  debug-fs.glsl  geometry-constants.glsl  geometry-globals.glsl  hull-fs.glsl  hull-vs.glsl  notch-geometry-cs.glsl  phong-fs.glsl  phong-gs.glsl  scale-vertices-cs.glsl  screen-vs.glsl  standard-fs.glsl  standard-vs.glsl
res/grid/: normal-surface-cs.glsl  normal-surface-fs.glsl  normal-surface-gs.glsl  normal-surface-tcs.glsl  normal-surface-tes.glsl  standard-plane-vs.glsl
res/haptic/: haptic-indicator-arrow-fs.glsl  haptic-indicator-arrow-gs.glsl  haptic-indicator-fs.glsl  haptic-indicator-gs.glsl  haptic-indicator-vs.glsl
res/hexagon/: bounding-quad-gs.glsl  discrepancy-fs.glsl  discrepancy-vs.glsl  globals.glsl  hexagon-fs.glsl  hexagon-gs.glsl  hexagon-vs.glsl  max-acc-val-fs.glsl  point-circle-fs.glsl  point-circle-gs.glsl  point-circle-vs.glsl  point-fs.glsl  point-vs.glsl  shade-fs.glsl  square-acc-fs.glsl  square-acc-vs.glsl  square-tiles-fs.glsl
res/hexagon/square/: max-val-fs.glsl  square-acc-vs.glsl  square-grid-fs.glsl  square-grid-gs.glsl  square-grid-vs.glsl  square-tiles-fs.glsl
res/molume/: molumecast-fs.glsl  molumepage-fs.glsl  molumepage-gs.glsl  molumepage-tes.glsl  molumepage-vs.glsl
res/sphere/: aoblur-fs.glsl  aosample-fs.glsl  blend-fs.glsl  blur-fs.glsl  density-fs.glsl  dofblend-fs.glsl  dofblur-fs.glsl  geomMean-fs.glsl  geomMean-vs.glsl  image-gs.glsl  shade-fs.glsl  shade-gs.glsl  shade-vs.glsl  spawn-fs.glsl  sphere-fs.glsl  sphere-gs.glsl  sphere-vs.glsl  surface-fs.glsl
res/tiles/: bounding-quad-gs.glsl  density-normals-fs.glsl  discrepancy-vs.glsl  globals.glsl  grid-fs.glsl  kde-fs.glsl  max-val-fs.glsl  point-circle-fs.glsl  point-circle-gs.glsl  point-fs.glsl  shade-fs.glsl
res/tiles/hexagon/: globals.glsl  hexagon-acc-vs.glsl  hexagon-grid-fs.glsl  hexagon-grid-gs.glsl  hexagon-grid-vs.glsl  hexagon-normals-fs.glsl  hexagon-tiles-fs.glsl
res/tiles/square/: square-acc-vs.glsl  square-grid-fs.glsl  square-grid-gs.glsl  square-max-val-fs.glsl  square-normals-fs.glsl  square-tiles-fs.glsl
res/utils/: gradient.glsl  heightfield-volume.glsl  noised-heightmap.glsl  rect-uvs.glsl  sinecurves.glsl  smooth-heightmap-2.glsl  smooth-heightmap-3.glsl  smooth-heightmap.glsl  sphere.glsl
src/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  CMakeLists.txt  CameraInteractor.cpp  CameraInteractor.h  Channel.h  Constants.h  DelegateUtils.h  GeometryUtils.cpp  GeometryUtils.h  HapticInteractor.cpp  HapticInteractor.h  HapticsInteractor.cpp  HapticsInteractor.h  Interactor.cpp  Interactor.h  Molume.cpp  Molume.h  MolumeRenderer.cpp  MolumeRenderer.h  Physics.cpp  Physics.h  Profile.h  Protein.cpp  Protein.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  STLExporter.cpp  STLExporter.h  Scene.cpp  Scene.h  SphereRenderer.cpp  SphereRenderer.h  Table.cpp  Timer.h  Utils.h  Viewer.cpp  Viewer.h  (+3 more)
src/CSV/: Table.cpp
src/interactors/: CameraInteractor.cpp  CameraInteractor.h  HapticInteractor.cpp  HapticInteractor.h  Interactor.cpp  Interactor.h  STLExporter.cpp
src/renderer/: AxisRenderer.cpp  AxisRenderer.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  CrystalRenderer.cpp  CrystalRenderer.h  GridSurfaceRenderer.cpp  GridSurfaceRenderer.h  HapticRenderer.cpp  HapticRenderer.h  HexTileRenderer.cpp  HexTileRenderer.h  MolumeRenderer.cpp  MolumeRenderer.h  Renderer.cpp  Renderer.h  SphereRenderer.cpp  SphereRenderer.h  WorkerThread.h
src/renderer/tileRenderer/: HexTile.cpp  HexTile.h  SquareTile.cpp  SquareTile.h  Tile.cpp  Tile.h  TileRenderer.cpp  TileRenderer.h
